--- a/index.html
+++ b/index.html
@@ -106,6 +106,19 @@
                 </div>
             </div>
         </div>
+
+        <div id="tutorial-modal" class="hidden" style="z-index: 3000;">
+            <div class="modal-backdrop"></div>
+            <div class="modal-inner" style="border-color: var(--secondary);">
+                <div class="modal-header" style="justify-content: center;">
+                    <h2 style="color: var(--secondary);">INSTRUCTION</h2>
+                </div>
+                <p id="tutorial-text" style="font-size: 1.5rem; margin: 20px 0;"></p>
+                <div id="tutorial-content"></div>
+                <button id="tutorial-next-btn" class="primary-btn"
+                    style="background: var(--secondary); color: black; width: 100%;">OK</button>
+            </div>
+        </div>
     </div>
 
     <script src="scenes.js"></script>
